# Bildungschancen

./: .gitignore  docker-compose.yaml
backend/: pyproject.toml
backend/src/api/: __main__.py  app.py  config.py
backend/src/api/crud/: __init__.py  brands.py  categories.py  currencies.py  document.py  ingredients.py  skills.py  sources.py  units.py  users.py
backend/src/api/models/: __init__.py  brands.py  categories.py  currencies.py  document.py  ingredient_units.py  ingredients.py  recipe_ingredients.py  recipes.py  skills.py  sources.py  units.py  user_skill.py  users.py
backend/src/api/routes/: __init__.py  brands.py  categories.py  currencies.py  documents.py  ingredients.py  skills.py  sources.py  units.py  users.py
backend/src/api/schemas/: __init__.py  base.py  creates.py  enums.py  reads.py  updates.py  users.py
backend/src/api/utils/: __init__.py  identifiers.py  logging.py  postgres_client.py  websocket.py
frontend/app/ingredients/: page.tsx
frontend/components/: InteractiveList.tsx
tests/: ingredients.http  skills.http  test.py  users.http
