[project]
name = "api"
version = "1.0.0"
description = "Bildungschance API"
dependencies = [
    "fastapi==0.128.0",
    "httpx==0.28.1",
    "pydantic-settings==2.12.0",
    "pydantic==2.12.5",
    "ulid-py==1.1.0",
    "uvicorn==0.40.0"
    "sqlalchemy==2.0.46"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
